frontend/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "tracing": {
              "operation_name": "ingress",
              "request_headers_for_tags": [
                "ot-tracer-traceid",
                "ot-tracer-spanid"
              ]
            },
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": [
                    "*"
                  ],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "weighted_clusters": {
                        "clusters": [
                          {
                            "name": "donutsalon-1",
                            "weight": 50
                          },
                          {
                            "name": "donutsalon-1",
                            "weight": 50
                          }
                        ]
                      }
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "tracing": {
    "http": {
      "driver": {
        "type": "dynamic",
        "config": {
          "library": "/usr/local/lib/libjaegertracing.so",
          "config_file": "/etc/jaeger.yaml"
        }
      }
    }
  },
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "donutsalon-1",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://donutsalon-1:80"
          }
        ],
        "ssl_context": {
          "cert_chain_file": "/certs/svid.pem",
          "private_key_file": "/certs/svid_key.pem",
          "ca_cert_file": "/certs/svid_bundle.pem",
          "ecdh_curves": "X25519:P-256:P-521:P-384",
          "verify_subject_alt_name": [
            "spiffe://example.org/backend1"
          ]
        }
      },
      {
        "name": "donutsalon-2",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://donutsalon-2:80"
          }
        ]
      },
      {
        "name": "jaeger",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://jaeger:9411"
          }
        ]
      }
    ]
  }
}
